<resources>
    <string name="app_name">Reviewzor</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="login_title">Log in</string>
    <string name="register_title">Register</string>
    <string name="register_next_bnt_text">NEXT</string>
    <string name="list">LIST</string>
    <string name="map">MAP</string>
    <string name="profile">PROFILE</string>
    <string name="key_api" translatable="false">AIzaSyBkjQOH_UpJAAlvsgYRF2w6CQN2hpUlZh0</string>
    <string name="detail">Detail:</string>
    <string name="address">Address:</string>
    <string name="category">Category:</string>
    <string name="name">Name:</string>
    <string name="rating">Rating:</string>
    <string name="secondName">Second name:</string>
    <string name="favoritePlaces">Favorite place:</string>

    <string-array name="categories">
        <item>Shop</item>
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Other</item>
    </string-array>
    <string name="profileName">Name:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile_exit">Profile exit</string>
</resources>