<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presenter.screen.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/login_title"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44sp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_regular"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        style="@style/MyButtonContained"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginTop="64dp"
        android:text="@string/log_in" />

</LinearLayout>